# network-monitor

./: CMakeLists.txt  conanfile.py  conanprofile.toml
Debug/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  FindBZip2.cmake  FindBoost.cmake  FindZLIB.cmake  build.ninja  cmake_install.cmake  compile_commands.json  conanbuildinfo.txt  conaninfo.txt  graph_info.json
inc/network-monitor/: WebsocketClient.h  file-downloader.h  transport-network.h
src/: WebsocketClient.cpp  file-downloader.cpp  main.cpp  transport-network.cpp
tests/: WebsocketClient.cpp  file-downloader.cpp  transport-network.cpp
